--- a/src/exchange/constants.hpp.in
+++ b/src/exchange/constants.hpp.in
@@ -3,14 +3,18 @@
 #include <eosiolib/dispatcher.hpp>
 #include <eosiolib/symbol.hpp>
 #include <eosiolib/system.h>
+#include <eosiolib/types.hpp>
+
+#include "../token/eosram.token.hpp"
 #include "types.hpp"
 
-
-#define RAM_SYMBOL S(0, RAM)
-#define EOS_SYMBOL CORE_SYMBOL
-#define EOS_TOKEN_CONTRACT N(eosio.token)
-#define EOSIO_RAM_CONTRACT N(eosio.ram)
-#define RAM_TOKEN_CONTRACT N(ram.token)
+#ifdef ABIGEN
+    static constexpr auto RAM_SYMBOL = 0;
+#endif
+static constexpr auto EOS_SYMBOL = CORE_SYMBOL;
+static constexpr auto EOS_TOKEN_CONTRACT = "eosio.token"_n;
+static constexpr auto EOSIO_RAM_CONTRACT = "eosio.ram"_n;
+static constexpr auto RAM_TOKEN_CONTRACT = "@RAM_TOKEN_CONTRACT@"_n;
 
 
 namespace eosram {
@@ -23,7 +27,7 @@ namespace eosram {
     static constexpr uint32_t onerror_resend_delay   = 5;       // 5s
 
     static eosio::extended_symbol eos_symbol() {
-        return eosio::extended_symbol(EOS_SYMBOL, EOS_TOKEN_CONTRACT);
+        return eosio::extended_symbol{EOS_SYMBOL, EOS_TOKEN_CONTRACT};
     }
 
     static eosio::extended_asset eos_token(eosio::asset asset) 
@@ -37,7 +41,7 @@ namespace eosram {
     }
 
     static eosio::extended_symbol ram_symbol() {
-        return eosio::extended_symbol(RAM_SYMBOL, RAM_TOKEN_CONTRACT);
+        return eosio::extended_symbol{RAM_SYMBOL, RAM_TOKEN_CONTRACT};
     }
 
     static eosio::extended_asset ram_token(eosio::asset asset) 
