Disable abi gen by default

--- a/src/exchange/CMakeLists.txt
+++ b/src/exchange/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.5)
 project(eosram.exchange VERSION 1.0.0)
 
+option(GEN_ABI "Generate ABI" OFF)
+
 if(NOT RAM_TOKEN_CONTRACT)
     message(SEND_ERROR "RAM_TOKEN_CONTRACT - RAM token contract is not set")
     set(RAM_TOKEN_CONTRACT "" CACHE STRING "RAM token contract name")
@@ -19,6 +21,9 @@ set(CMAKE_CXX_STANDARD 17)  # require C++17 std
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
+get_filename_component(DIR_ONE_ABOVE ../ ABSOLUTE)
+message(STATUS ${DIR_ONE_ABOVE})
+
 # if no wasm root is given use default path
 if(EOSIO_CDT_ROOT STREQUAL "" OR NOT EOSIO_CDT_ROOT)
    set(EOSIO_CDT_ROOT "/usr/local/eosio.cdt")
@@ -30,9 +35,10 @@ list(APPEND CMAKE_MODULE_PATH ${EOSIO_CDT_ROOT}/lib/cmake)
 #include the toolchain cmake
 include(EosioWasmToolchain)
 
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/../../bin/exchange")
+if(GEN_ABI)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --abigen")
+endif()
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --abigen")
 add_executable(${PROJECT_NAME}.wasm 
     "eosram.exchange.cpp" 
     "ds/ram_exchange_state.cpp" 
