--- a/src/token/CMakeLists.txt
+++ b/src/token/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.5)
 project(eosram.token VERSION 1.0.0)
 
+option(GEN_ABI "Generate ABI" OFF)
+
 # if no wasm root is given use default path
 if(EOSIO_CDT_ROOT STREQUAL "" OR NOT EOSIO_CDT_ROOT)
    set(EOSIO_CDT_ROOT "/usr/local/eosio.cdt")
@@ -12,6 +14,7 @@ list(APPEND CMAKE_MODULE_PATH ${EOSIO_CDT_ROOT}/lib/cmake)
 #include the toolchain cmake
 include(EosioWasmToolchain)
 
-set(CMAKE_CXX_FLAGS " -abigen ${CMAKE_CXX_FLAGS} ")
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/../../bin/token")
+if(GEN_ABI)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --abigen")
+endif()
 add_executable(${PROJECT_NAME}.wasm eosram.token.cpp )
