--- a/src/exchange/constants.hpp.in
+++ b/src/exchange/constants.hpp.in
@@ -19,12 +19,13 @@ namespace eosram {
     static constexpr auto k_eosio  = "eosio"_n;
 
     static constexpr int32_t  min_ttl                = 1;       // 1sec
-    static constexpr ttl_t    infinite_ttl           = -1;
-    static constexpr int64_t  transfer_fee_in_ram    = 250;
-    static constexpr int64_t  min_ram_trade_amount   = transfer_fee_in_ram;
-    static constexpr uint32_t order_execution_limit  = 1;       // 1 order per execution
-    static constexpr uint32_t order_execution_delay  = 1;       // 1s
-    static constexpr uint32_t onerror_resend_delay   = 5;       // 5s
+    static constexpr bool     req_convert_on_ote      = true;    // Force convert if order executes only one time.
+    static constexpr ttl_t    infinite_ttl            = -1;
+    static constexpr int64_t  transfer_fee_in_ram     = 250;
+    static constexpr int64_t  min_ram_trade_amount    = transfer_fee_in_ram;
+    static constexpr uint32_t order_execution_limit   = 1;       // 1 order per execution
+    static constexpr uint32_t order_execution_delay   = 1;       // 1s
+    static constexpr uint32_t onerror_resend_delay    = 5;       // 5s
 
     static eosio::extended_symbol eos_symbol() {
         return eosio::extended_symbol{EOS_SYMBOL, EOS_TOKEN_CONTRACT};
